force-app/main/default/objects/Document_Library__c/Document_Library__c.object-meta.xml
<CustomObject>
    <label>Document Library</label>
    <nameField>
        <label>Document Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Library</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>