force-app/main/default/objects/Document_Library__c/fields/Additional_Doc_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Additional_Doc_Picklist__c</fullName>
    <label>Additional Doc Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Tenancy Agreement</fullName>
            </value>
            <value>
                <fullName>3 Months Recent Bank Statements</fullName>
            </value>
            <value>
                <fullName>Most Recent Partner Payslip</fullName>
            </value>
            <value>
                <fullName>Second Most Recent Partner Payslip</fullName>
            </value>
            <value>
                <fullName>Centrelink Income Statement</fullName>
            </value>
            <value>
                <fullName>Child Support Asssessment</fullName>
            </value>
            <value>
                <fullName>2021 Notice of Assessment</fullName>
            </value>
            <value>
                <fullName>2021 Individual Tax Return</fullName>
            </value>
            <value>
                <fullName>Employment Letter</fullName>
            </value>
            <value>
                <fullName>Employment Contract</fullName>
            </value>
            <value>
                <fullName>Third Most Recent Payslip</fullName>
            </value>
            <value>
                <fullName>Year to Date MyGov Income Statement</fullName>
            </value>
            <value>
                <fullName>Copy of Last Payslip for June 2022</fullName>
            </value>
            <value>
                <fullName>MyGov Income Statement FY 2021</fullName>
            </value>
            <value>
                <fullName>Governement Issued Photo ID</fullName>
            </value>
            <value>
                <fullName>Medicare Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Parners 2021 Notice of Assessment</fullName>
            </value>
            <value>
                <fullName>Partners 2021 Individual Tax Return</fullName>
            </value>
            <value>
                <fullName>Recent Vehicle Loan Statement</fullName>
            </value>
            <value>
                <fullName>Recent Personal Loan Statement</fullName>
            </value>
            <value>
                <fullName>Recent Debt Collection Statement</fullName>
            </value>
            <value>
                <fullName>Recent Credit Card Statement</fullName>
            </value>
            <value>
                <fullName>3 x Most Recent Business Invoices</fullName>
            </value>
            <value>
                <fullName>Rental Income Statement</fullName>
            </value>
            <value>
                <fullName>Rental Ledger</fullName>
            </value>
            <value>
                <fullName>Rates Notice</fullName>
            </value>
            <value>
                <fullName>Additional Job1 Payslip 1</fullName>
            </value>
            <value>
                <fullName>Additional Job1 Payslip 2</fullName>
            </value>
            <value>
                <fullName>Additional Job2 Payslip 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>