force-app/main/default/objects/Document_Library__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Document Library</relationshipLabel>
    <relationshipName>Document_Library</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>