force-app/main/default/objects/Document_Library__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>postApproval</fullName>
            </value>
            <value>
                <fullName>lenderRequested</fullName>
            </value>
            <value>
                <fullName>supporting</fullName>
            </value>
            <value>
                <fullName>application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>