force-app/main/default/objects/Document_Library__c/fields/DeleteFileId__c.field-meta.xml
<CustomField>
    <fullName>DeleteFileId__c</fullName>
    <formula>CASESAFEID(Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeleteFileId</label>
    <type>Text</type>
</CustomField>