force-app/main/default/objects/Document_Library__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Drivers License Front</fullName>
                <default>true</default>
                <label>Drivers License Front</label>
            </value>
            <value>
                <fullName>Drivers License Back</fullName>
            </value>
            <value>
                <fullName>Payslip One</fullName>
            </value>
            <value>
                <fullName>Payslip Two</fullName>
            </value>
            <value>
                <fullName>Bankstatements</fullName>
            </value>
            <value>
                <fullName>Manual Uploaded Bankstatements</fullName>
            </value>
            <value>
                <fullName>Privacy Policy</fullName>
            </value>
            <value>
                <fullName>Credit File</fullName>
            </value>
            <value>
                <fullName>Sales Invoice</fullName>
            </value>
            <value>
                <fullName>Insurance Certificate</fullName>
            </value>
            <value>
                <fullName>Preliminary Assessment</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Centrelink Income Statements</fullName>
            </value>
            <value>
                <fullName>Most Recent Tax Return</fullName>
            </value>
            <value>
                <fullName>Notice of Assessment</fullName>
            </value>
            <value>
                <fullName>Partner Declared Income</fullName>
            </value>
            <value>
                <fullName>Tenancy Agreement</fullName>
            </value>
            <value>
                <fullName>Rental Ledger</fullName>
            </value>
            <value>
                <fullName>Trust Deed</fullName>
            </value>
            <value>
                <fullName>Child Support Assessment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Verifier</fullName>
            </value>
            <value>
                <fullName>Most Recent Partner Payslip</fullName>
            </value>
            <value>
                <fullName>Drivers Licence</fullName>
            </value>
            <value>
                <fullName>Payslips</fullName>
            </value>
            <value>
                <fullName>Partners Payslip</fullName>
            </value>
            <value>
                <fullName>Partners Payslip2</fullName>
            </value>
            <value>
                <fullName>Partners N O A</fullName>
            </value>
            <value>
                <fullName>Partners T R</fullName>
            </value>
            <value>
                <fullName>Partners N O A2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>