force-app/main/default/objects/Document_Library__c/fields/File_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Link__c</fullName>
    <formula>HYPERLINK(&quot;/apex/S3downloadfile?id=&quot; &amp; Id , File_Name__c ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Link</label>
    <type>Text</type>
</CustomField>