force-app/main/default/objects/Document_Library__c/fields/Removed_At__c.field-meta.xml
<CustomField>
    <fullName>Removed_At__c</fullName>
    <label>Removed At</label>
    <type>DateTime</type>
</CustomField>