force-app/main/default/objects/Document_Library__c/fields/Soft_Delete__c.field-meta.xml
<CustomField>
    <fullName>Soft_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soft Delete</label>
    <type>Checkbox</type>
</CustomField>