force-app/main/default/objects/Document_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Document_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>File_Type__c</columns>
    <columns>Is_Deleted__c</columns>
    <columns>Removed_At__c</columns>
    <columns>Removed_By__c</columns>
    <columns>Soft_Delete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>